--- a/site.yml
+++ b/site.yml
@@ -4,6 +4,7 @@
 - hosts: OSX
   roles:
     - { role: zsh/zshrc/common}
+    - { role: git/gitconfig}
     - { role: python/pyenv/install}
     - { role: python/pyenv/python-build}
     - { role: homebrew/brew/cask}
