--- a/roles/python/pyenv/install/tasks/add_shell_dotfile.yml
+++ b/roles/python/pyenv/install/tasks/add_shell_dotfile.yml
@@ -12,7 +12,7 @@
   # 書き込むログインshell fileを保存しておきたいだけなので常にokの状態に保つ
   # see http://qiita.com/ryurock/items/639e5f7e49d25c3b6d75
   changed_when: False
-  register: shell_configure_file
+  register: shell_dotfile
 
 - name: Check using shell register in dir
   shell: |
@@ -22,33 +22,33 @@
         echo "~/.bash"
       fi
   changed_when: False
-  register: shell_configure_dir
+  register: shell_dotfile_dir
 
-- name: Create directory shell_configure_file name
+- name: Create directory shell_dotfile name
   action:
-    file path={{ shell_configure_dir.stdout }} state=directory mode=0755
+    file path={{ shell_dotfile_dir.stdout }} state=directory mode=0755
 
 - name: Template present pyenv.sh
   action:
-    template src=pyenv.sh.j2 dest={{ shell_configure_dir.stdout }}/pyenv.sh
+    template src=pyenv.sh.j2 dest={{ shell_dotfile_dir.stdout }}/pyenv.sh
  
-- name: Check shell_configure_file source pyenv.sh
+- name: Check shell_dotfile source pyenv.sh
   action:
-    shell cat {{ shell_configure_file.stdout }} | grep -c 'source {{ shell_configure_dir.stdout }}/pyenv.sh'
+    shell cat {{ shell_dotfile.stdout }} | grep -c 'source {{ shell_dotfile_dir.stdout }}/pyenv.sh'
   failed_when: no
   changed_when: False
   register: command_result
 
-- name: Add shell_configure_file source pyenv.sh
+- name: Add shell_dotfile source pyenv.sh
   action: 
-    lineinfile dest={{shell_configure_file.stdout}} line='source {{ shell_configure_dir.stdout }}/pyenv.sh'
+    lineinfile dest={{shell_dotfile.stdout}} line='source {{ shell_dotfile_dir.stdout }}/pyenv.sh'
   when: command_result.stdout == "0"
   notify:
-    - execute source shell_configure_file
+    - execute source shell_dotfile
 
 - name: Shell of the added configuration file is rewritten in the case of bash
   action: 
-    replace dest={{shell_configure_dir.stdout}}/pyenv.sh regexp='pyenv init - zsh' replace='pyenv init -'
-  when: shell_configure_file.stdout == "~/.bashrc"
+    replace dest={{shell_dotfile_dir.stdout}}/pyenv.sh regexp='pyenv init - zsh' replace='pyenv init -'
+  when: shell_dotfile.stdout == "~/.bashrc"
   notify:
-    - execute source shell_configure_file
+    - execute source shell_dotfile
