--- a/roles/login-shell/zsh/oh-my-zsh/install/tasks/main.yml
+++ b/roles/login-shell/zsh/oh-my-zsh/install/tasks/main.yml
@@ -1,13 +1,7 @@
 - name: Check oh-my-zsh installed
-  shell: |
-    if [ -e ~/.oh-my-zsh ]; then
-      echo "installed"
-    else
-      echo "not installed"
-    fi
-  register: installed  
-  changed_when: False
+  stat: path=~/.oh-my-zsh
+  register: installed
 
 - name: Install oh-my-zsh
   shell: curl -L https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh | sh
-  when: installed.stdout != "installed"
+  when: installed.stat.exists == false
