modify roles homebrew/brew/cask added dendecies

--- a/roles/homebrew/brew/chrome-cli/tasks/main.yml
+++ b/roles/homebrew/brew/chrome-cli/tasks/main.yml
@@ -1,2 +1,4 @@
 - name: Install the chrome-cli in the brew.
   homebrew: name=chrome-cli state=present
+  dependencies:
+    - { role: homebrew/brew-cask/google-chrome }
