mv homebrew/brew/nkf nkf/install

--- a/site.yml
+++ b/site.yml
@@ -19,9 +19,9 @@
     - { role: fonts/ricty-diminished/install }
     - { role: homebrew/install }
     - { role: tree/install }
+    - { role: nkf/install }
     - { role: homebrew/brew/cask }
     - { role: homebrew/brew/curl }
-    - { role: homebrew/brew/nkf }
     - { role: homebrew/brew/nmap }
     - { role: homebrew/brew/wget }
     - { role: homebrew/brew-cask/iterm2 }
