added playbook android-studio

--- a/site.yml
+++ b/site.yml
@@ -32,3 +32,4 @@
     - { role: homebrew/brew-cask/shiftit }
     - { role: homebrew/brew-cask/kobito }
     - { role: homebrew/brew-cask/lightshot }
+    - { role: homebrew/brew-cask/android-studio }
