--- a/site.yml
+++ b/site.yml
@@ -36,3 +36,4 @@
     - { role: homebrew/brew-cask/lightshot }
     - { role: homebrew/brew-cask/android-studio }
     - { role: homebrew/brew-cask/coteditor }
+    - { role: homebrew/brew-cask/virtualbox }
