modify condition when ansible_os_fimily added

--- a/roles/homebrew/brew-cask/google-chrome/tasks/main.yml
+++ b/roles/homebrew/brew-cask/google-chrome/tasks/main.yml
@@ -1,2 +1,3 @@
 - name: Install the google-chrome in the brew-cask
   homebrew_cask: name=google-chrome state=present
+  when: "ansible_os_family == 'Darwin'"
