--- a/roles/homebrew/brew-cask/shiftit/tasks/main.yml
+++ b/roles/homebrew/brew-cask/shiftit/tasks/main.yml
@@ -1,2 +1,3 @@
 - name: Install the shiftit in the brew-cask see https://github.com/fikovnik/ShiftIt
   homebrew_cask: name=shiftit state=present
+  when: "ansible_os_family == 'Darwin'"
