--- a/roles/homebrew/brew-cask/karabiner/tasks/main.yml
+++ b/roles/homebrew/brew-cask/karabiner/tasks/main.yml
@@ -1,2 +1,3 @@
 - name: Install the karabiner in the brew-cask. see https://pqrs.org/osx/karabiner/
   homebrew_cask: name=karabiner state=present
+  when: "ansible_os_family == 'Darwin'"
