--- a/roles/homebrew/brew-cask/virtualbox/tasks/main.yml
+++ b/roles/homebrew/brew-cask/virtualbox/tasks/main.yml
@@ -1,2 +1,3 @@
 - name: Install the virtualbox in the brew-cask
   homebrew_cask: name=virtualbox state=present
+  when: "ansible_os_family == 'Darwin'"
