--- a/site.yml
+++ b/site.yml
@@ -17,6 +17,7 @@
     - { role: python/pyenv/install }
     - { role: python/pyenv/python-build }
     - { role: fonts/ricty-diminished/install }
+    - { role: fonts/source-han-code-jp/install }
     - { role: homebrew/install }
     - { role: tree/install }
     - { role: nkf/install }
