--- a/roles/homebrew/brew-cask/sublime-text/tasks/main.yml
+++ b/roles/homebrew/brew-cask/sublime-text/tasks/main.yml
@@ -1,3 +1,3 @@
-- name: Install the vagrant in the brew-cask
+- name: Install the sublime-text in the brew-cask
   homebrew_cask: name=sublime-text state=present
   when: "ansible_os_family == 'Darwin'"
