--- a/site.yml
+++ b/site.yml
@@ -42,3 +42,4 @@
     - { role: homebrew/brew-cask/vagrant }
     - { role: homebrew/brew-cask/sublime-text }
     - { role: homebrew/brew-cask/sourcetree }
+    - { role: homebrew/brew-cask/bettertouchtool }
