--- a/site.yml
+++ b/site.yml
@@ -43,3 +43,4 @@
     - { role: homebrew/brew-cask/sublime-text }
     - { role: homebrew/brew-cask/sourcetree }
     - { role: homebrew/brew-cask/bettertouchtool }
+    - { role: homebrew/brew-cask/clipy }
