rename template file and refactor source

--- a/roles/login-shell/zsh/prezto/install/tasks/main.yml
+++ b/roles/login-shell/zsh/prezto/install/tasks/main.yml
@@ -15,18 +15,20 @@
 - name: Template present prezto configuration .zpreztorc
   template: src=zpreztorc.j2 dest={{ ansible_env.HOME }}/.zpreztorc
 
-- name: Template present prezto configuration .zshrc
-  template: src=prezto.zshrc.sh.j2 dest={{ ansible_env.HOME }}/.zsh/prezto.zshrc.sh
+- name: Template present prezto initialize file .zshrc
+  template: src=prezto.init.sh.j2 dest={{ ansible_env.HOME }}/.zsh/prezto.init.sh
 
-- name: Check .zshrc source prezto.zshrc.sh
-  shell: cat {{ ansible_env.HOME }}/.zshrc | grep -c '~/.zsh/prezto.zshrc.sh'
+- name: Check .zshrc source prezto.init.sh
+  shell: cat {{ ansible_env.HOME }}/.zshrc | grep -c '~/.zsh/prezto.init.sh'
   failed_when: no
   changed_when: False
   register: command_result
 
-- name: Add .zshrc prezto.zshrc.sh
-  #先頭行にsedで入れてる。BSD sedだと\nで上手く改行が出力できないため
-  shell: LF=$(printf '\\\012_'); LF=${LF%_}; sed -i -e "1s/^/source \~\/.zsh\/prezto.zshrc.sh$LF/g" {{ ansible_env.HOME }}/.zshrc
+- name: Add .zshrc prezto.init.sh
+  lineinfile:
+    dest={{ ansible_env.HOME }}/.zshrc
+    line="source ~/.zsh/prezto.init.sh"
+    insertbefore=BOF state=present regexp="prezto\.init\.sh"
   when: command_result.stdout == "0"
   notify:
     - execute source .zshrc
