--- a/site.yml
+++ b/site.yml
@@ -62,3 +62,4 @@
     - { role: homebrew/brew-cask/slack }
     - { role: homebrew/brew-cask/caffeine }
     - { role: homebrew/brew-cask/dropbox }
+    - { role: homebrew/brew-cask/skitch }
