--- a/roles/homebrew/brew-cask/skitch/tasks/main.yml
+++ b/roles/homebrew/brew-cask/skitch/tasks/main.yml
@@ -1,3 +1,3 @@
-- name: Install the caffeine in the brew-cask
+- name: Install the skitch in the brew-cask
   homebrew_cask: name=skitch state=present
   when: "ansible_os_family == 'Darwin'"
