remove homebrew/brew-cask/vagrant -> vagrant/install. and when condision ansible_os_family == "Darwin" added

--- a/roles/homebrew/install/tasks/main.yml
+++ b/roles/homebrew/install/tasks/main.yml
@@ -4,4 +4,6 @@
 
 - name: Install homebrew
   shell: ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
-  when: installed.stat.exists == false
+  when:
+   - "ansible_os_family == 'Darwin'"
+   - installed.stat.exists == false
